clusters/home/infrastructure/garage/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-webui
  namespace: garage
spec:
  type: ClusterIP
  ports:
    - port: 3909
      targetPort: 3909
  selector:
    app: garage-webui
