clusters/home/infrastructure/garage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3
  namespace: garage
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: istio-ingress
  hostnames:
    - "garage.naadroid.dev"
  rules:
    - backendRefs:
        - name: garage
          port: 3900
