clusters/home/infrastructure/garage/webui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-webui
  namespace: garage
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: istio-ingress
  hostnames:
    - "garage-ui.naadroid.dev"
  rules:
    - backendRefs:
        - name: garage-webui
          port: 3909
